Tweak paper following pnas submission (#54)
* submit to arxiv

The main.tex has been tweaked to reflect the submission
to pnas. The images and tex files which are not being used
anymore have been removed.

* :enumerate sections

* ackow as bullet points

* address reviewers comment

* addresses comments on pr

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,10 @@
+@inproceedings{belkin2002using,
+  title={Using manifold stucture for partially labeled classification},
+  author={Belkin, Mikhail and Niyogi, Partha},
+  booktitle={Advances in neural information processing systems},
+  pages={929--936},
+  year={2002}
+}
 @article{Flood1958,
 author = {Merrill M. Flood},
 title = {Some Experimental Games},
@@ -394,6 +401,27 @@ isbn="978-3-540-37497-8"
   title = {Elementary Linear Algebra: Applications Version},
   year = 2014
 }
+@article{Matsui1992,
+title = "Best response dynamics and socially stable strategies",
+journal = "Journal of Economic Theory",
+volume = "57",
+number = "2",
+pages = "343 - 362",
+year = "1992",
+issn = "0022-0531",
+doi = "https://doi.org/10.1016/0022-0531(92)90040-O",
+url = "http://www.sciencedirect.com/science/article/pii/002205319290040O",
+author = "Matsui, Akihiko",
+}
+@article{Benureau2018,
+  title={Re-run, repeat, reproduce, reuse, replicate: transforming code into scientific contributions},
+  author={Benureau, Fabien CY and Rougier, Nicolas P},
+  journal={Frontiers in neuroinformatics},
+  volume={11},
+  pages={69},
+  year={2018},
+  publisher={Frontiers}
+}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%DATA%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 @misc{glynatsi2019,
   author       = {Glynatsi, Nikoleta E.},
@@ -423,4 +451,56 @@ isbn="978-3-540-37497-8"
   timestamp = {Wed, 24 Apr 2019 12:21:25 +0200},
   biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1904-00973},
   bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%SOFTWARE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+@software{nikoleta_glynatsi_2019,
+  author       = {Nikoleta E. Glynatsi and
+                  Vince Knight},
+  title        = {{Nikoleta-v3/Memory-size-in-the-prisoners-dilemma: 
+                   initial release}},
+  month        = nov,
+  year         = 2019,
+  publisher    = {Zenodo},
+  version      = {0.0.1},
+  doi          = {10.5281/zenodo.3533146},
+  url          = {https://doi.org/10.5281/zenodo.3533146}
+}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%SIMILAR WORKS%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+@article{Hilbe2017,
+  title={Memory-n strategies of direct reciprocity},
+  author={Hilbe, Christian and Martinez-Vaquero, Luis A and Chatterjee, Krishnendu and Nowak, Martin A},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={114},
+  number={18},
+  pages={4715--4720},
+  year={2017},
+  publisher={National Acad Sciences}
+}
+@article{Stewart2016,
+  title={Small groups and long memories promote cooperation},
+  author={Stewart, Alexander J and Plotkin, Joshua B},
+  journal={Scientific reports},
+  volume={6},
+  pages={26889},
+  year={2016},
+  publisher={Nature Publishing Group}
+}
+@article{Pan2015,
+  title={Zero-determinant strategies in iterated public goods game},
+  author={Pan, Liming and Hao, Dong and Rong, Zhihai and Zhou, Tao},
+  journal={Scientific reports},
+  volume={5},
+  pages={13096},
+  year={2015},
+  publisher={Nature Publishing Group}
+}
+@article{Stewart2013,
+  title={From extortion to generosity, evolution in the iterated prisoner’s dilemma},
+  author={Stewart, Alexander J and Plotkin, Joshua B},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={110},
+  number={38},
+  pages={15348--15353},
+  year={2013},
+  publisher={National Acad Sciences}
 }
