--- a/pnas/PNAS-template-main.tex
+++ b/pnas/PNAS-template-main.tex
@@ -1,62 +1,43 @@
-\documentclass[10pt]{article}
+\documentclass[9pt,twocolumn,twoside,lineno]{pnas-new}
+% Use the lineno option to display guide line numbers if required.
 
-% Manage page layout
-\usepackage[margin=2.5cm, includefoot, footskip=30pt]{geometry}
-\pagestyle{plain}
-\setlength{\parindent}{0em}
-\setlength{\parskip}{1em}
-\renewcommand{\baselinestretch}{1}
-
-%%%%%%%PACKAGES HERE%%%%%%%
-\usepackage{tikz}
-\usepackage{amsmath}
-\usepackage{amssymb}
-\usepackage{mathtools}
+\templatetype{pnasbriefreport} % Choose template 
+% {pnasresearcharticle} = Template for a two-column research article
+% {pnasmathematics} %= Template for a one-column mathematics article
+% {pnasinvited} %= Template for a PNAS invited submission
 \usepackage{amsthm}
-\usepackage{graphicx}
-\usepackage{subcaption}
-\usepackage{standalone}
-\usepackage{booktabs}
-\usepackage{setspace}
-\usepackage[algoruled,lined]{algorithm2e}
-\usepackage[noend]{algpseudocode}
-\usepackage{wrapfig}
-\usepackage{hyperref}
-\usepackage{authblk}
-\usepackage[toc,page]{appendix}
-\usetikzlibrary{calc, shapes, patterns, decorations.pathreplacing}
-
-\makeatletter
-\def\BState{\State\hskip-\ALG@thistlm}
-\makeatother
-
 \newcommand{\R}{\mathbb{R}}
 \newtheorem{theorem}{Theorem}
-\usetikzlibrary{decorations.pathmorphing, decorations.pathreplacing, angles,
-                quotes, calc, er, positioning}
-
 \newtheorem{lemma}[theorem]{Lemma}
-\def\arraystretch{1.5}
+\usepackage{subcaption}
 
 \title{Stability of defection, optimisation of strategies and the limits of
-       memory in the Prisoner's Dilemma.}
-\author[1]{Nikoleta E. Glynatsi}
-\author[1]{Vincent A. Knight}
+memory in the Prisoner's Dilemma.}
 
-\affil[1]{Cardiff University, School of Mathematics, Cardiff, United Kingdom}
-\date{}
-\setcounter{Maxaffil}{0}
-\renewcommand\Affilfont{\itshape\small}
+% Use letters for affiliations, numbers to show equal authorship (if applicable) and to indicate the corresponding author
+\author[a, 2]{Nikoleta E. Glynatsi}
+\author[a]{Vince A. Knight}
 
-\begin{document}
+\affil[a]{Cardiff University, School of Mathematics, Cardiff, United Kingdom}
 
-\maketitle
+% Please give the surname of the lead author for the running footer
+\leadauthor{Nikoleta E. Glynatsi} 
+
+% Please include corresponding author, author contribution and author declaration information
+\authorcontributions{Designed research N.G. and V.K; Performed research N.G;
+Analyzed data N.G.; Wrote the paper N.G. and V.K.}
+\authordeclaration{We declare no competing interests.}
+% \equalauthors{\textsuperscript{1}V.K. contributed equally to this work with N.G.}
+\correspondingauthor{\textsuperscript{2}E-mail: glynatsine@cardiff.ac.uk}
+
+% At least three keywords are required at submission. Please provide three to five keywords, separated by the pipe symbol
+\keywords{Prisoner's Dilemma $|$ zero-determinant $|$ best responses $|$ memory-one $|$ extortionate $|$}
 
 \begin{abstract}
     Memory-one strategies are a set of Iterated Prisoner's Dilemma strategies
-    that have been praised for their mathematical tractability and performance
+    that have been acclaimed for their mathematical tractability and performance
     against single opponents. This manuscript investigates \textit{best
-    response} memory-one strategies as a multidimensional
+    responses} to a collection of memory-one strategies as a multidimensional
     optimisation problem. Though extortionate memory-one strategies have gained
     much attention, we demonstrate that best response memory-one strategies do not
     behave in an extortionate way, and moreover, for memory one strategies to be
@@ -64,9 +45,19 @@
     also provide evidence that memory-one strategies suffer from their limited
     memory in multi agent interactions and can be out performed by
     longer memory strategies.
-\end{abstract}
+    \end{abstract}
 
-The Prisoner's Dilemma (PD) is a two player game used in understanding the
+\dates{This manuscript was compiled on \today}
+\doi{\url{www.pnas.org/cgi/doi/10.1073/pnas.XXXXXXXXXX}}
+
+\begin{document}
+
+\maketitle
+\thispagestyle{firststyle}
+\ifthenelse{\boolean{shortarticle}}{\ifthenelse{\boolean{singlecolumn}}{\abscontentformatted}{\abscontent}}{}
+
+% If your first paragraph (i.e. with the \dropcap) contains a list environment (quote, quotation, theorem, definition, enumerate, itemize...), the line after the list may have some extra indentation. If this is the case, add \parshape=0 to the end of the list environment.
+\dropcap{T}he Prisoner's Dilemma (PD) is a two player game used in understanding the
 evolution of cooperative behaviour, formally introduced in~\cite{Flood1958}.
 Each player has two options, to cooperate (C) or to defect (D). The decisions
 are made simultaneously and independently. The normal form representation of the
@@ -112,23 +103,17 @@ In a similar fashion to~\cite{Press2012} the purpose of this work is to consider
 a given memory-one strategy; however, whilst~\cite{Press2012} found a way for a
 player to manipulate a given opponent, this work will consider a
 multidimensional optimisation approach to identify the best response to a given
-group of opponents. The outcomes of our work reinforce known results, namely
-that memory-one strategies must be forgiving to be evolutionarily stable~\cite{Stewart2013, Stewart2016}
-and that longer-memory strategies have a certain form of advantage over short memory
-strategies~\cite{Hilbe2017, Pan2015}.
-
-
-In particular, this work presents a compact method of
+group of opponents. In particular, this work presents a compact method of
 identifying the best response memory-one strategy against a given set of
 opponents, and evaluates whether it behaves in a
 zero-determinant way which in turn indicates whether it can be extortionate. This is also done in evolutionary settings. Moreover, we
 introduce a well designed framework that allows the comparison of an optimal
-memory one strategy and a more complex strategy which has a larger memory. This
-is used to identify conditions for which defection is stable; thus identifying
-environments where cooperation will not occur.
+memory one strategy and a more complex strategy which has a larger memory, and an
+identification of conditions for which defection is known to be stable; thus
+identifying environments where cooperation will not occur.
 
-\section{Methods and Results}
-\subsection{Utility}
+\section*{Methods and Results}
+\subsection*{Utility}
 
 One specific advantage of memory-one strategies is their mathematical
 tractability. They can be represented completely as an element of \(\R^{4}_{[0, 1]}\). This
@@ -148,13 +133,13 @@ can be modeled as a stochastic process, and more specifically as a Markov chain
 whose corresponding transition matrix \(M\) is
 given by Eq.~\ref{eq:transition_matrix}. The long run steady state probability
 vector \(v\), which is the solution to \(v M = v\), can be
-combined with the payoff matrices of Eq.~\ref{equ:pd_definition} to give the expected
+combined with the payoff matrices of Ep.~\ref{equ:pd_definition} to give the expected
 payoffs for each player. More specifically, the utility for a memory-one
 strategy \(p\) against an opponent \(q\), denoted as \(u_q(p)\), is given by
 Eq.~\ref{eq:press_dyson_utility}.
 
 \begin{equation}\label{eq:transition_matrix}
-    \resizebox{.5\hsize}{!}{$\input{tex/m_matrix.tex}$}
+    \resizebox{.9\hsize}{!}{$\input{m_matrix.tex}$}
 \end{equation}
 
 
@@ -183,7 +168,8 @@ each opponent. More specifically the expected utility of a memory-one strategy
 against a \(N\) number of opponents is given by:
 
 \begin{align}\label{eq:tournament_utility}
-       & \frac{1}{N} \sum\limits_{i=1} ^ {N} {u_q}^{(i)} (p) = 
+       & \frac{1}{N} \sum\limits_{i=1} ^ {N} {u_q}^{(i)} (p) = \\
+       &
        \frac{\frac{1}{N} \sum\limits_{i=1} ^ {N} (\frac{1}{2} pQ^{(i)} p^T + c^{(i)} p + a^ {(i)})
        \prod\limits_{\tiny\begin{array}{l} j=1 \\ j \neq i \end{array}} ^
        N (\frac{1}{2} p\bar{Q}^{(j)} p^T + \bar{c}^{(j)} p + \bar{a}^ {(j)})}
@@ -196,7 +182,7 @@ It will be used to obtain best response memory-one strategies, in tournaments
 and evolutionary dynamics, and to explore the conditions under which defection
 dominates cooperation.
 
-\subsection{Stability of defection}\label{subsection:stability_defection}
+\subsection*{Stability of defection}\label{subsection:stability_defection}
 
 An immediate result from our formulation can be
 obtained by evaluating the sign of Eq. \ref{eq:tournament_utility}'s derivative
@@ -248,9 +234,9 @@ Fig.~\ref{fig:stability_of_defection}.
 These have been simulated using~\cite{axelrodproject} an open
 source research framework for the study of the IPD.
 
-\begin{figure}[!htbp]
+\begin{figure}
     \centering
-    \includegraphics[width=.4\linewidth]{img/stability_of_defection_plots.pdf}
+    \includegraphics[width=.8\linewidth]{stability_of_defection_plots.pdf}
     \caption{A. For \(q_{1}=(0.22199, 0.87073, 0.20672, 0.91861)\),
     $q_{2}=(0.48841, 0.61174, 0.76591, 0.51842)$ and
     $q_{3}=(0.2968, 0.18772, 0.08074, 0.73844)$, Eq.~\ref{eq:defection_condition_one} and
@@ -261,7 +247,7 @@ source research framework for the study of the IPD.
     and Defector does not take over the population.}\label{fig:stability_of_defection}
 \end{figure}
 
-\subsection{Best response memory-one strategies}\label{section:best_response_memory_one}
+\subsection*{Best response memory-one strategies}
 
 As discussed ZDs have been acclaimed for their robustness
 against a single opponent. ZDs are evidence that extortion works
@@ -324,9 +310,7 @@ algorithmic approach is considered, called \textit{best response dynamics}. The
 best response dynamics approach used in this manuscript is given by
 Algorithm~\ref{algo:best_response_dynamics}.
 
-\begin{center}
-\begin{minipage}{.55\textwidth}
-\begin{algorithm}[H]
+\begin{algorithm}
        $p^{(t)}\leftarrow (1, 1, 1, 1)$\;
        \While{$p^{(t)} \neq p ^{(t -1)}$}{
        $p^{(t + 1)} =  \text{argmax} \frac{1}{N} \sum\limits_{i=1} ^ {N} {u_q}^{(i)}
@@ -335,8 +319,6 @@ Algorithm~\ref{algo:best_response_dynamics}.
        \caption{Best response dynamics Algorithm}
        \label{algo:best_response_dynamics}
 \end{algorithm}
-\end{minipage}
-\end{center}
 
 The results of this section use Bayesian optimisation to generate a data set of best response
 memory-one strategies, in tournaments and evolutionary dynamics whilst \(N=2\).
@@ -345,7 +327,7 @@ corresponding to 1000 different instances of a best response strategy in
 tournaments and evolutionary dynamics. For each trial a set of 2 opponents is
 randomly generated and the memory-one best responses against them is found.
 
-The source code for the experiments presented in this manuscript has been written in a sustainable manner~\cite{Benureau2018}.
+The source code used in this manuscript has been written in a sustainable manner~\cite{Benureau2018}.
 It is open source (\url{https://github.com/Nikoleta-v3/Memory-size-in-the-prisoners-dilemma})
 and tested which ensures the validity of the results. It has also been archived
 and can be found at~\cite{nikoleta_glynatsi_2019}.
@@ -386,7 +368,7 @@ occur.
 
 \begin{table}
 \begin{center}
-\resizebox{.6\columnwidth}{!}{%
+\resizebox{\columnwidth}{!}{%
 \begin{tabular}{lrrrrrrrrrrr}
     \toprule
     & mean & std  & 5\% & 50\% &  95\% & max & median & skew & kurt\\
@@ -402,16 +384,15 @@ occur.
 \end{table}
 
 \begin{figure}[!htbp]
-    \centering
-    \includegraphics[width=.55\textwidth]{img/behaviour_violin_plots.pdf}
-    \caption{Distributions of \(p^*\) for best responses in tournaments and
-    evolutionary settings. The medians, denoted as \(\bar{p}^*\), for tournaments
-    are \(\bar{p}^* = (0, 0, 0, 0)\), and for evolutionary settings
-    \(\bar{p}^* = (0, 0.19, 0, 0)\).}
-    \label{fig:behaviour_violin_plots}
+        \includegraphics[width=.45\textwidth]{behaviour_violin_plots.pdf}
+        \caption{Distributions of \(p^*\) for best responses in tournaments and
+        evolutionary settings. The medians, denoted as \(\bar{p}^*\), for tournaments
+        are \(\bar{p}^* = (0, 0, 0, 0)\), and for evolutionary settings
+        \(\bar{p}^* = (0, 0.19, 0, 0)\).}
+        \label{fig:behaviour_violin_plots}
 \end{figure}
 
-\subsection{Longer memory best responses}
+\subsection*{Longer memory best responses}
 
 This section focuses on the memory size of strategies. The effectiveness of
 memory in the IPD has been previously explored in the literature, however, no one
@@ -451,28 +432,29 @@ at~\cite{glynatsi2019}. Estimating a best response Gambler (17 dimensions) is
 computational more expensive compared to a best response memory-one (4
 dimensions). As a result, the analysis of this section is based on a total of
 152 trials. For each trial two random opponents have been selected. The 152 pair
-of opponents are a sub set of the opponents used in section~\ref{section:best_response_memory_one}.
+of opponents are a sub set of the opponents used in the previous section.
 
 The ratio between Gambler's utility and the best response memory-one strategy's utility has been calculated and its distribution in
 given in Fig.~\ref{fig:utilities_gambler_mem_one}.
 It is evident from Fig.~\ref{fig:utilities_gambler_mem_one} that
 Gambler always performs as well as the best response memory-one strategy and often performs better. There are
 no points where the ratio value is less than 1, thus Gambler never performed less
-than the best response memory-one strategy and in places outperforms it. This seems to be at odd with the
+than the best response memory-one strategy. This seems to be at odd with the
 result of~\cite{Press2012} that against a memory-one opponent having a longer memory
 will not give a strategy any
-advantage. However, against two memory-one opponents Gambler's performance is better than
+advantage. However, against two memory-one opponents, Gambler's performance is better than
 the optimal memory-one strategy. This is evidence that in the case of two opponents having a
-shorter memory is limiting.
+shorter memory is limiting and this is potentially another example of the advantages
+of adaptability.
 
 \begin{figure}[!htbp]
     \centering
-    \includegraphics[width=.5\textwidth]{img/gambler_performance_against_mem_one.pdf}
+    \includegraphics[width=.40\textwidth]{gambler_performance_against_mem_one.pdf}
     \caption{The ratio between the utilities of Gambler and best response memory-one
     strategy for 152 different pair of opponents.}\label{fig:utilities_gambler_mem_one}
 \end{figure}
 
-\section{Discussion}
+\section*{Discussion}
 This manuscript has considered \textit{best response} strategies in the IPD game, and
 more specifically, \textit{memory-one best responses}. It has proven that there is
 a compact way of identifying a memory-one best response to a group of opponents,
@@ -527,25 +509,10 @@ the optimal strategy for a variety of situations, this work casts doubt
 on the effectiveness of ZDs, highlights the importance of adaptability and provides
 a framework for the continued understanding of these important questions.
 
-\section{Acknowledgements}
+\showmatmethods{} % Display the Materials and Methods section
 
-A variety of software libraries have been used in this work:
+\section*{Appendix}
 
-\begin{itemize}
-    \item The Axelrod library for IPD simulations~\cite{axelrodproject}.
-    \item The Scikit-optimize library for an implementation of Bayesian optimisation~\cite{tim_head_2018_1207017}.
-    \item The Matplotlib library for visualisation~\cite{hunter2007matplotlib}.
-    \item The SymPy library for symbolic mathematics~\cite{sympy}.
-    \item The Numpy library for data manipulation~\cite{walt2011numpy}.
-\end{itemize}
-
-% Bibliography
-\bibliographystyle{plain}
-\bibliography{bibliography.bib}
-
-\section{Appendix}
-
-\subsection{Theorem~\ref{theorem_one}}
 \begin{theorem}\label{theorem_one}
 
     The expected utility of a memory-one strategy \(p\in\mathbb{R}_{[0,1]}^4\)
@@ -561,153 +528,34 @@ A variety of software libraries have been used in this work:
 
     \begin{center}
     \begin{equation}
-    \resizebox{.65\linewidth}{!}{\arraycolsep=2.5pt%
+    \resizebox{.95\linewidth}{!}{\arraycolsep=2.5pt%
     \boldmath\(
-    Q = \input{tex/q_numerator}\)},
+    Q = \input{q_numerator}\)},
     \end{equation}
     \begin{equation}\label{eq:q_bar_matrix}
-    \resizebox{.65\linewidth}{!}{\arraycolsep=2.5pt%
+    \resizebox{.9\linewidth}{!}{\arraycolsep=2.5pt%
     \boldmath\(
-    \bar{Q} =  \input{tex/q_denominator}\)}.
+    \bar{Q} =  \input{q_denominator}\)}.
     \end{equation}
     \end{center}
 
     \(c \text{ and } \bar{c}\) \(\in \R^{4 \times 1}\) are similarly defined by:
 
     \begin{equation}\label{eq:q_matrix_numerator}
-    \resizebox{0.25\linewidth}{!}{\arraycolsep=2.5pt%
-    \boldmath\(c = \input{tex/c_numerator}\),}
+    \resizebox{0.5\linewidth}{!}{\arraycolsep=2.5pt%
+    \boldmath\(c = \input{c_numerator}\),}
     \end{equation}
     \begin{equation}\label{eq:q_matrix_denominator}
-    \resizebox{0.25\linewidth}{!}{\arraycolsep=2.5pt%
-    \boldmath\(\bar{c} = \input{tex/c_denominator}\),
+    \resizebox{0.5\linewidth}{!}{\arraycolsep=2.5pt%
+    \boldmath\(\bar{c} = \input{c_denominator}\),
     }
     \end{equation}
-    and the constant terms \(a, \bar{a}\) are defined as \(a = \input{tex/numerator_constant}\) and
-    \(\bar{a} = \input{tex/denominator_constant}\).
+    and the constant terms \(a, \bar{a}\) are defined as \(a = \input{numerator_constant}\) and
+    \(\bar{a} = \input{denominator_constant}\).
 \end{theorem}
 
-\begin{proof}
+Proof is given in (SI).
 
-    It was discussed that \(u_q(p)\) it is the product of the steady states \(v\) and
-    the PD payoffs,
-    
-    \[u_q(p) = v \cdot (R, S, T, P).\]
-    
-    More specifically, with \((R, P, S, T) = (3, 1, 0, 5)\)
-    
-    \begingroup
-    \footnotesize
-    \begin{equation}
-        u_q(p) =
-        \left(
-          \frac
-            {\parbox{6in}{$
-                p_{1} p_{2} (q_{1} q_{2} - 5 q_{1} q_{4} - q_{1} - q_{2} q_{3} + 5 q_{3} q_{4} + q_{3}) + p_{1} p_{3} (- q_{1} q_{3} + q_{2} q_{3}) + p_{1} p_{4} (5 q_{1} q_{3} - 5 q_{3} q_{4}) + p_{3} p_{4} (- 3 q_{2} q_{3} + 3 q_{3} q_{4}) +$ \\
-                \hspace*{1cm} $ p_{2} p_{3} (- q_{1} q_{2} + q_{1} q_{3} + 3 q_{2} q_{4} + q_{2} - 3 q_{3} q_{4} - q_{3}) + p_{2} p_{4} (- 5 q_{1} q_{3} + 5 q_{1} q_{4} + 3 q_{2} q_{3} - 3 q_{2} q_{4} + 2 q_{3} - 2 q_{4}) + $ \\
-                \hspace*{1cm} $ p_{1} (- q_{1} q_{2} + 5 q_{1} q_{4} + q_{1}) + p_{2} (q_{2} q_{3} - q_{2} - 5 q_{3} q_{4} - q_{3} + 5 q_{4} + 1) + p_{3} (q_{1} q_{2} - q_{2} q_{3} - 3 q_{2} q_{4} - q_{2} + q_{3}) +$ \\
-                \hspace*{4cm} $ p_{4} (- 5 q_{1} q_{4} + 3 q_{2} q_{4} + 5 q_{3} q_{4} - 5 q_{3} + 2 q_{4}) + q_{2} - 5 q_{4} - 1$
-            }}
-            {\parbox{6in}{$
-            p_{1} p_{2} (q_{1} q_{2} - q_{1} q_{4} - q_{1} - q_{2} q_{3} + q_{3} q_{4} + q_{3}) + p_{1} p_{3} (- q_{1} q_{3} + q_{1} q_{4} + q_{2} q_{3} - q_{2} q_{4}) + p_{1} p_{4} (- q_{1} q_{2} + q_{1} q_{3} + q_{1} + q_{2} q_{4} - q_{3} q_{4} - q_{4}) +$ \\
-            $ p_{2} p_{3} (- q_{1} q_{2} + q_{1} q_{3} + q_{2} q_{4} + q_{2} - q_{3} q_{4} - q_{3}) + p_{2} p_{4} (- q_{1} q_{3} + q_{1} q_{4} + q_{2} q_{3} - q_{2} q_{4}) + p_{3} p_{4} (q_{1} q_{2} - q_{1} q_{4} - q_{2} q_{3} - q_{2} + q_{3} q_{4} + q_{4}) + $ \\
-            $ p_{1} (- q_{1} q_{2} + q_{1} q_{4} + q_{1}) + p_{2} (q_{2} q_{3} - q_{2} - q_{3} q_{4} - q_{3} + q_{4} + 1) + p_{3} (q_{1} q_{2} - q_{2} q_{3} - q_{2} + q_{3} - q_{4}) + p_{4} (- q_{1} q_{4} + q_{2} + q_{3} q_{4} - q_{3} + q_{4} - 1) + $ \\
-            \hspace*{7cm} $q_{2} - q_{4} - 1$
-          }}
-        \right).
-    \end{equation}
-    \endgroup
-    
-    Let us consider the numerator of \(u_q(p)\). The cross product terms \(p_ip_j\)
-    are given by,
-    
-    \begingroup
-    \footnotesize
-    \begin{align*}
-    p_{1} p_{2} (q_{1} q_{2} - 5 q_{1} q_{4} - q_{1} - q_{2} q_{3} + 5 q_{3} q_{4}
-    + q_{3}) + p_{1} p_{3} (- q_{1} q_{3} + q_{2} q_{3}) + p_{1} p_{4} (5 q_{1} q_{3} -
-    5 q_{3} q_{4}) + p_{3} p_{4} (- 3 q_{2} q_{3} + 3 q_{3} q_{4}) +  \\
-    p_{2} p_{3} (- q_{1} q_{2} + q_{1} q_{3} + 3 q_{2} q_{4} + q_{2} - 3 q_{3} q_{4} - q_{3}) +
-    p_{2} p_{4} (- 5 q_{1} q_{3} + 5 q_{1} q_{4} + 3 q_{2} q_{3} - 3 q_{2} q_{4} +
-    2 q_{3} - 2 q_{4}).
-    \end{align*}
-    \endgroup
-    
-    This can be re written in a matrix format given by Eq.~\ref{eq:cross_product_coeffs}.
-    
-    \begin{equation}\label{eq:cross_product_coeffs}
-        \resizebox{0.8\linewidth}{!}{\arraycolsep=2.5pt%
-        \boldmath\( 
-        (p_1, p_2, p_3, p_4) \frac{1}{2} \input{tex/q_numerator} \begin{pmatrix} 
-        p_1 \\
-        p_2 \\
-        p_3 \\
-        p_4 \end{pmatrix}
-        \) }
-    \end{equation}
-    
-    Similarly, the linear terms are given by,
-    
-    \begingroup
-    \footnotesize
-    \begin{align*}
-    p_{1} (- q_{1} q_{2} + 5 q_{1} q_{4} + q_{1}) + p_{2} (q_{2} q_{3} - q_{2} - 5 q_{3} q_{4} - q_{3} + 5 q_{4} + 1) + p_{3} (q_{1} q_{2} - q_{2} q_{3} - 3 q_{2} q_{4} - q_{2} + q_{3}) + \\
-    p_{4} (- 5 q_{1} q_{4} + 3 q_{2} q_{4} + 5 q_{3} q_{4} - 5 q_{3} + 2 q_{4}).
-    \end{align*}
-    \endgroup
-    
-    and the expression can be written using a matrix format as Eq.~\ref{eq:linear_coeffs}.
-    
-    \begin{equation}\label{eq:linear_coeffs}
-        \resizebox{0.38\linewidth}{!}{\arraycolsep=2.5pt%
-        \boldmath\(
-        (p_1, p_2, p_3, p_4) \input{tex/c_numerator}\)}
-    \end{equation}
-    
-    Finally, the constant term of the numerator, which is obtained by substituting
-    $p=(0, 0, 0, 0)$, is given by Eq.~\ref{eq:constant}.
-    
-    \begin{equation}\label{eq:constant}
-    q_{2} - 5 q_{4} - 1
-    \end{equation}
-    
-    Combining Eq.~\ref{eq:cross_product_coeffs}, Eq.~\ref{eq:linear_coeffs} and Eq.~\ref{eq:constant}
-    gives that the numerator of \(u_q(p)\) can be written as,
-    
-    \begingroup
-    \tiny\boldmath
-    \begin{align*}
-        \frac{1}{2}p & \input{tex/q_numerator} p^T +  \\
-        & \input{tex/q_numerator} p + q_{2} - 5 q_{4} - 1
-    \end{align*}
-    \endgroup
-    
-    and equivalently as,
-    
-    \[\frac{1}{2}pQp^T + cp + a\]
-    
-    where \(Q\) \(\in \R^{4\times4}\) is a square matrix defined by the
-    transition probabilities of the opponent \(q_1, q_2, q_3, q_4\) as follows:
-    
-    \begin{equation*}
-        \resizebox{0.7\linewidth}{!}{\arraycolsep=2.5pt%
-        \boldmath\(
-        Q = \input{tex/q_numerator}\)},
-    \end{equation*}
-    
-    \(c\) \(\in \R^{4 \times 1}\) is similarly defined by:
-    
-    \begin{equation*}
-        \resizebox{0.3\linewidth}{!}{\arraycolsep=2.5pt%
-        \boldmath\(c = \input{tex/c_numerator}\),}
-    \end{equation*}
-    
-    and \(a = \input{tex/numerator_constant}\).
-    
-    The same process is done for the denominator.
-\end{proof}
-
-\subsection{Theorem~\ref{memone_group_best_response}}
 \begin{theorem}\label{memone_group_best_response}
 
 The optimal behaviour of a memory-one strategy player
@@ -719,7 +567,7 @@ for \(q^{(i)} \in \R_{[0, 1]} ^ 4\) is given by:
 
 The set \(S_q\) is defined as all the possible combinations of:
 
-{\scriptsize
+{\tiny
 \begin{equation}\label{eq:s_q_set}
     S_q =
     \left\{p \in \mathbb{R} ^ 4 \left|
@@ -738,12 +586,13 @@ The set \(S_q\) is defined as all the possible combinations of:
 Note that there is no immediate way to find the zeros of
 \(\frac{d}{dp} \sum\limits_{i=1} ^ N  u_q(p)\) where,
 
-{\scriptsize
+{\tiny
 \begin{align}\label{eq:mo_tournament_derivative}
-    \frac{d}{dp} \sum\limits_{i=1} ^ {N} {u_q}^{(i)} (p) & = \displaystyle\sum\limits_{i=1} ^ {N}
+    \frac{d}{dp} \sum\limits_{i=1} ^ {N} {u_q}^{(i)} (p) & = \nonumber \\
+    & = \displaystyle\sum\limits_{i=1} ^ {N} & 
     \frac{\left(pQ^{(i)} + c^{(i)}\right) \left(\frac{1}{2} p\bar{Q}^{(i)} p^T + \bar{c}^{(i)} p + \bar{a}^ {(i)}\right)}
-    {\left(\frac{1}{2} p\bar{Q}^{(i)} p^T + \bar{c}^{(i)} p + \bar{a}^ {(i)}\right)^ 2}
-    - \frac{\left(p\bar{Q}^{(i)} + \bar{c}^{(i)}\right) \left(\frac{1}{2} pQ^{(i)} p^T + c^{(i)} p + a^ {(i)}\right)}
+    {\left(\frac{1}{2} p\bar{Q}^{(i)} p^T + \bar{c}^{(i)} p + \bar{a}^ {(i)}\right)^ 2} \nonumber \\ 
+     & & - \frac{\left(p\bar{Q}^{(i)} + \bar{c}^{(i)}\right) \left(\frac{1}{2} pQ^{(i)} p^T + c^{(i)} p + a^ {(i)}\right)}
     {\left(\frac{1}{2} p\bar{Q}^{(i)} p^T + \bar{c}^{(i)} p + \bar{a}^ {(i)}\right)^ 2}
 \end{align}
 }
@@ -753,103 +602,28 @@ For \(\frac{d}{dp} \sum\limits_{i=1} ^ N  u_q(p)\) to equal zero then:
 {\scriptsize
 \begin{align}\label{eq:polynomials_roots}
     \displaystyle\sum\limits_{i=1} ^ {N}
-    \left(pQ^{(i)} + c^{(i)}\right) \left(\frac{1}{2} p\bar{Q}^{(i)} p^T + \bar{c}^{(i)} p + \bar{a}^ {(i)}\right)
-    - \left(p\bar{Q}^{(i)} + \bar{c}^{(i)}\right) \left(\frac{1}{2} pQ^{(i)} p^T + c^{(i)} p + a^ {(i)}\right)
-    & = 0, \quad {while} \\
-    \displaystyle\sum\limits_{i=1} ^ {N} \frac{1}{2} p\bar{Q}^{(i)} p^T + \bar{c}^{(i)} p + \bar{a}^ {(i)} & \neq 0.
+    & \left(pQ^{(i)} + c^{(i)}\right) \left(\frac{1}{2} p\bar{Q}^{(i)} p^T + \bar{c}^{(i)} p + \bar{a}^ {(i)}\right) \\
+    & - \left(p\bar{Q}^{(i)} + \bar{c}^{(i)}\right) \left(\frac{1}{2} pQ^{(i)} p^T + c^{(i)} p + a^ {(i)}\right)
+    &= 0, \quad {while} \\
+    \displaystyle\sum\limits_{i=1} ^ {N} & \frac{1}{2} p\bar{Q}^{(i)} p^T + \bar{c}^{(i)} p + \bar{a}^ {(i)} \neq 0.
 \end{align}}
 
 \end{theorem}
 
-\begin{proof}
-    The optimal behaviour of a memory-one strategy player
-    \(p^* \in \R_{[0, 1]} ^ 4\)
-    against a set of \(N\) opponents \(\{q^{(1)}, q^{(2)}, \dots, q^{(N)} \}\)
-    for \(q^{(i)} \in \R_{[0, 1]} ^ 4\) is established by:
-    
-    \[p^* = \textnormal{argmax}\left(\sum\limits_{i=1} ^ N  u_q(p)\right), \ p \in S_q,\]
-    
-    where \(S_q\) is given by:
-    {\scriptsize
-    \begin{equation}\label{eq:s_q_set}
-        S_q =
-        \left\{p \in \mathbb{R} ^ 4 \left|
-            \begin{aligned}
-                \bullet\quad p_j \in \{0, 1\} & \quad \text{and} \quad \frac{d}{dp_k} 
-                \sum\limits_{i=1} ^ N  u_q^{(i)}(p) = 0 \\
-                & \quad \text{for all} \quad j \in J \quad \&  \quad k \in K  \quad \text{for all} \quad J, K \\
-                & \quad \text{where} \quad J \cap K = \O \quad
-                \text{and} \quad J \cup K = \{1, 2, 3, 4\}.\\
-                \bullet\quad  p \in \{0, 1\} ^ 4
-            \end{aligned}\right.
-        \right\}.
-    \end{equation}}
+Proof is given in (SI).
 
-    The optimisation problem of Eq.~\ref{eq:mo_tournament_optimisation} 
+\acknow{
+A variety of software libraries have been used in this work,
+the Axelrod library for IPD simulations~\cite{axelrodproject},
+the Scikit-optimize library for an implementation of Bayesian optimisation~\cite{tim_head_2018_1207017},
+the Matplotlib library for visualisation~\cite{hunter2007matplotlib},
+the SymPy library for symbolic mathematics~\cite{sympy} and
+the Numpy library for data manipulation~\cite{walt2011numpy}.
+}
 
-    \begin{equation}\label{eq:mo_tournament_optimisation}
-        \begin{aligned}
-        \max_p: & \ \sum_{i=1} ^ {N} {u_q}^{(i)} (p)
-        \\
-        \text{such that}: & \ p \in \R_{[0, 1]}
-        \end{aligned}
-    \end{equation}
+\showacknow{} % Display the acknowledgments section
 
-    can be written as:
-
-    \begin{equation}\label{eq:mo_tournament_optimisation_standard}
-        \begin{aligned}
-        \max_p: & \ \sum_{i=1} ^ {N} {u_q}^{(i)} (p)
-        \\
-        \text{such that}: p_i & \leq 1 \text{ for } \in \{1, 2, 3, 4\} \\
-        - p_i & \leq 0 \text{ for } \in \{1, 2, 3, 4\} \\
-        \end{aligned}
-    \end{equation}
-    
-    The optimisation problem has two inequality constraints and regarding the optimality
-    this means that:
-    
-    \begin{itemize}
-        \item either the optimum is away from the boundary of the optimization domain, and so the constraints plays no role;
-        \item or the optimum is on the constraint boundary.
-    \end{itemize}
-    
-    Thus, the following three cases must be considered:
-    
-    \textbf{Case 1:} The solution is on the boundary and any of the possible
-    combinations for $p_i \in \{0, 1\}$ for $i \in \{1, 2, 3, 4\}$ are candidate
-    optimal solutions.
-    
-    \textbf{Case 2:} The optimum is away from the boundary of the optimization domain
-    and the interior solution $p^*$ necessarily satisfies the condition
-    \(\frac{d}{dp} \sum\limits_{i=1} ^ N  u_q(p^*) = 0\).
-    
-    \textbf{Case 3:} The optimum is away from the boundary of the optimization domain
-    but some constraints are equalities. The candidate solutions in this case
-    are any combinations of $p_j \in \{0, 1\} \quad \text{and} \quad \frac{d}{dp_k} 
-    \sum\limits_{i=1} ^ N  u_q^{(i)}(p) = 0$ 
-    forall $ j \in J \text{ \& } k \in K \text{ forall } J, K
-    \text{ where } J \cap K = \O \text{ and } J \cup K = \{1, 2, 3, 4\}.$
-    
-    Combining cases 1-3 a set of candidate solution is constructed as:
-    {\scriptsize
-    \begin{equation*}
-        S_q =
-        \left\{p \in \mathbb{R} ^ 4 \left|
-            \begin{aligned}
-                \bullet\quad p_j \in \{0, 1\} & \quad \text{and} \quad \frac{d}{dp_k} 
-                \sum\limits_{i=1} ^ N  u_q^{(i)}(p) = 0
-                \quad \text{for all} \quad j \in J \quad \&  \quad k \in K  \quad \text{for all} \quad J, K \\
-                & \quad \text{where} \quad J \cap K = \O \quad
-                \text{and} \quad J \cup K = \{1, 2, 3, 4\}.\\
-                \bullet\quad  p \in \{0, 1\} ^ 4
-            \end{aligned}\right.
-        \right\}.
-    \end{equation*}}
-    
-    This set is denoted as $S_q$ and the optimal solution to
-    Eq.~\ref{eq:mo_tournament_optimisation} is the point from $S_q$ for which the
-    utility is maximised.
-\end{proof}
+% Bibliography
+\bibliography{pnas-sample}
 
 \end{document}
