add corresponding author and declarations

--- a/cover_letter.tex
+++ b/cover_letter.tex
@@ -7,10 +7,11 @@
 \title{Cover Letter: A bibliometric study of research topics, collaboration and
 influence in the Iterated Prisoner’s Dilemma.}
  
-\author[1]{Nikoleta E. Glynatsi}
+\author[1, *]{Nikoleta E. Glynatsi}
 \author[1]{Vincent A. Knight}
  
 \affil[1]{Cardiff University, School of Mathematics, Cardiff, United Kingdom}
+\affil[*]{Corresponding author: Nikoleta E. Glynatsi, glynatsine@cardiff.ac.uk}
 \date{}
 \setcounter{Maxaffil}{0}
 \renewcommand\Affilfont{\itshape\small}
@@ -18,7 +19,7 @@ influence in the Iterated Prisoner’s Dilemma.}
 \begin{document}
  
 \maketitle
- 
+
 To the editors,
  
 The Prisoner's Dilemma has been used for decades to explain human interactions
@@ -48,6 +49,11 @@ emergence (or not) of cooperative behaviour in complex dynamics, and thus we
 believe that our paper would be a great addition to the journal.
  
 The Authors.
+
+\textbf{Declarations}
+
+The authors did not have any prior discussions with a Nature Communications editor
+about the work described in the manuscript.
  
 \bibliographystyle{plain}
 \bibliography{bibliography.bib}
