addresses comments on cover letter

--- a/cover_letter.tex
+++ b/cover_letter.tex
@@ -30,9 +30,9 @@ whilst not needing to remember much of their past interactions. A rapidly
 expanding literature following~\cite{Press2012} questioned these results and
 have since then established that memory-one strategies must be forgiving to be
 evolutionarily stable~\cite{Stewart2013} and that longer-memory strategies have
-a certain form of advantage over short memory strategies~\cite{Hilbe2017}.
- 
-Our manuscript presents further evidence against the statements
+a certain advantage over short memory strategies~\cite{Hilbe2017}.
+
+This manuscript presents further evidence downplaying the findings
 of~\cite{Press2012}. It reinforces the discussion that the best action is
 adaptability not manipulation and that short memory can be limiting. This is
 done by exploring the full space of memory-one strategies, and more specifically, the best
@@ -54,6 +54,7 @@ The Authors.
 
 The authors did not have any prior discussions with a Nature Communications editor
 about the work described in the manuscript.
+
  
 \bibliographystyle{plain}
 \bibliography{bibliography.bib}
