add potential reviewers

--- a/cover_letter.tex
+++ b/cover_letter.tex
@@ -55,6 +55,13 @@ The Authors.
 The authors did not have any prior discussions with a Nature Communications editor
 about the work described in the manuscript.
 
+\textbf{Potential Reviewers}
+
+\begin{enumerate}
+    \item Dr Christian Hilbe; hilbe@evolbio.mpg.de
+    \item Dr Alexander J. Stewart; astewar6@CENTRAL.uh.edu
+\end{enumerate}
+
  
 \bibliographystyle{plain}
 \bibliography{bibliography.bib}
