change reference to article under nature comms

--- a/cover_letter.tex
+++ b/cover_letter.tex
@@ -29,7 +29,7 @@ Prisoner's Dilemma game is to manipulate their opponent and ensure victory
 whilst not needing to remember much of their past interactions. A rapidly
 expanding literature following~\cite{Press2012} questioned these results and
 have since then established that memory-one strategies must be forgiving to be
-evolutionarily stable~\cite{Stewart2013} and that longer-memory strategies have
+evolutionarily stable~\cite{adami2013} and that longer-memory strategies have
 a certain advantage over short memory strategies~\cite{Hilbe2017}.
 
 This manuscript presents further evidence downplaying the findings
