--- a/cover_letter.tex
+++ b/cover_letter.tex
@@ -4,8 +4,8 @@
 \setlength{\parskip}{1em}
 \usepackage{authblk}
  
-\title{Cover Letter: A bibliometric study of research topics, collaboration and
-influence in the Iterated Prisoner’s Dilemma.}
+\title{Cover Letter: Stability of defection, optimisation of strategies and the limits of
+memory in the Prisoner's Dilemma.}
  
 \author[1, *]{Nikoleta E. Glynatsi}
 \author[1]{Vincent A. Knight}
