tweak to files for submission in Scientific Reports

--- a/cover_letter.tex
+++ b/cover_letter.tex
@@ -52,7 +52,7 @@ The Authors.
 
 \textbf{Declarations}
 
-The authors did not have any prior discussions with a Nature Communications editor
+The authors did not have any prior discussions with a  Scientific Reports Editorial Board Member
 about the work described in the manuscript.
 
 \textbf{Potential Reviewers}
