--- a/main.tex
+++ b/main.tex
@@ -40,10 +40,11 @@
 
 \title{Stability of defection, optimisation of strategies and the limits of
        memory in the Prisoner's Dilemma.}
-\author[1]{Nikoleta E. Glynatsi}
+\author[1, *]{Nikoleta E. Glynatsi}
 \author[1]{Vincent A. Knight}
 
 \affil[1]{Cardiff University, School of Mathematics, Cardiff, United Kingdom}
+\affil[*]{Corresponding author: Nikoleta E. Glynatsi, glynatsine@cardiff.ac.uk}
 \date{}
 \setcounter{Maxaffil}{0}
 \renewcommand\Affilfont{\itshape\small}
@@ -51,6 +52,8 @@
 \begin{document}
 
 \maketitle
+
+\newpage
 
 \begin{abstract}
     Memory-one strategies are a set of Iterated Prisoner's Dilemma strategies
