--- a/main.tex
+++ b/main.tex
@@ -596,8 +596,46 @@ A variety of software libraries have been used in this work:
     the PD payoffs,
     
     \[u_q(p) = v \cdot (R, S, T, P).\]
+
+    The steady states vector \(v\) is as follows:
+    \begingroup
+    \tiny
+    \begin{equation*}
+    \begin{split}
+        & \left[ \qquad \qquad \qquad \qquad \qquad \qquad \qquad \quad \frac{p_{2} p_{3} (q_{2} q_{4} - q_{3} q_{4}) + p_{2} p_{4} (q_{2} q_{3} - q_{2} q_{4} - q_{3} + q_{4}) +
+        p_{3} p_{4} (- q_{2} q_{3} + q_{3} q_{4}) - p_{3} q_{2} q_{4} + p_{4}q_{4} (q_{2} - 1)}{\bar{v}} \right., \\
+        & \left. \qquad \qquad \qquad \qquad \quad \frac{p_{1} p_{3} (q_{1} q_{4} - q_{2} q_{4}) + p_{1} p_{4} (- q_{1} q_{2} + q_{1} + q_{2} q_{4} -
+        q_{4}) + p_{3} p_{4} (q_{1} q_{2} - q_{1} q_{4} - q_{2} + q_{4}) + p_{3}q_{4} (q_{2} - 1) -
+         p_{4} q_{2} (q_{4} + 1) + p_{4} (q_{4} - 1)}{\bar{v}} \right., \\
+        & \left. \qquad \qquad \qquad \quad \frac{- p_{1} p_{2} (q_{1} q_{4} - q_{3} q_{4}) - p_{1} p_{4} (- q_{1} q_{3} + q_{3} q_{4})
+          + p_{1} q_{1} q_{4} - p_{2} p_{4} (q_{1} q_{3} - q_{1} q_{4} - q_{3} + q_{4}) - 
+          p_{2} q_{4} (q_{3}  + 1) - p_{4}q_{4} (q_{1} + q_{3}) - p_{4} (q_{3} 
+          + q_{4}) - q_{4}}{\bar{v}} \right., \\ 
+        & \left. \frac{p_{1} p_{2} (q_{1} q_{2} - q_{1} - q_{2} q_{3} + q_{3}) + p_{1} p_{3} (- q_{1} q_{3} + q_{2} q_{3})
+         - p_{1} q_{1} (q_{2} + 1) + p_{2} p_{3} (- q_{1} q_{2} + q_{1} q_{3} 
+         + q_{2} - q_{3}) + p_{2} q_{2} (q_{3} - 1) - p_{2} (q_{3} + 1) +
+          p_{3} q_{2} (q_{1}  - q_{3}) - p_{3} (q_{2} + q_{3}) + q_{2} - 1}{\bar{v}}\right],
+    \end{split}
+    \end{equation*}
+    \endgroup
+
+    where,
+    \begingroup
+    \footnotesize
+    \begin{equation*}
+        \begin{split}
+           \bar{v} = & \quad p_{1} p_{2} (q_{1} q_{2} - q_{1} q_{4} - q_{1} - q_{2} q_{3} + q_{3} q_{4} + q_{3}) - p_{1} p_{3} (q_{1} q_{3} - q_{1} q_{4} - q_{2} q_{3} + q_{2} q_{4}) -
+           p_{1} p_{4} (q_{1} q_{2} - q_{1} q_{3} - q_{1} - q_{2} q_{4} + q_{3} q_{4} + q_{4}) - \\
+           & \quad p_{1} q_{1} (q_{2} + q_{4} + 1) + p_{2} p_{3} (- q_{1} q_{2} + q_{1} q_{3} + q_{2} q_{4} + q_{2} - q_{3} q_{4} - q_{3}) 
+           + p_{2} p_{4} (- q_{1} q_{3} + q_{1} q_{4} + q_{2} q_{3} - q_{2} q_{4}) + p_{2} q_{2} (q_{3} - 1) - p_{2} q_{3} (q_{4} - 1) + \\
+           & \quad p_{2} (q_{4} + 1) +  p_{3} p_{4} (q_{1} q_{2} - q_{1} q_{4} - q_{2} q_{3} - q_{2} + q_{3} q_{4} + q_{4}) + p_{3} q_{2} q_{1} ( - p_{3} - 1) + p_{3} (q_{3} - 
+           q_{4}) - p_{4} (q_{1} q_{4} + q_{2} + q_{3} q_{4} - q_{3} + q_{4} - 1) + \\
+           & \quad q_{2} - q_{4} - 1
+        \end{split}
+        \end{equation*}
+    \endgroup
     
-    More specifically, with \((R, P, S, T) = (3, 1, 0, 5)\)
+    The dot product of \(v \cdot (3, 0, 5, 1)\) gives,
     
     \begingroup
     \footnotesize
@@ -765,29 +803,6 @@ For \(\frac{d}{dp} \sum\limits_{i=1} ^ N  u_q(p)\) to equal zero then:
 \end{theorem}
 
 \begin{proof}
-    The optimal behaviour of a memory-one strategy player
-    \(p^* \in \R_{[0, 1]} ^ 4\)
-    against a set of \(N\) opponents \(\{q^{(1)}, q^{(2)}, \dots, q^{(N)} \}\)
-    for \(q^{(i)} \in \R_{[0, 1]} ^ 4\) is established by:
-    
-    \[p^* = \textnormal{argmax}\left(\sum\limits_{i=1} ^ N  u_q(p)\right), \ p \in S_q,\]
-    
-    where \(S_q\) is given by:
-    {\scriptsize
-    \begin{equation}\label{eq:s_q_set}
-        S_q =
-        \left\{p \in \mathbb{R} ^ 4 \left|
-            \begin{aligned}
-                \bullet\quad p_j \in \{0, 1\} & \quad \text{and} \quad \frac{d}{dp_k} 
-                \sum\limits_{i=1} ^ N  u_q^{(i)}(p) = 0 \\
-                & \quad \text{for all} \quad j \in J \quad \&  \quad k \in K  \quad \text{for all} \quad J, K \\
-                & \quad \text{where} \quad J \cap K = \O \quad
-                \text{and} \quad J \cup K = \{1, 2, 3, 4\}.\\
-                \bullet\quad  p \in \{0, 1\} ^ 4
-            \end{aligned}\right.
-        \right\}.
-    \end{equation}}
-
     The optimisation problem of Eq.~\ref{eq:mo_tournament_optimisation} 
 
     \begin{equation}\label{eq:mo_tournament_optimisation}
@@ -834,7 +849,7 @@ For \(\frac{d}{dp} \sum\limits_{i=1} ^ N  u_q(p)\) to equal zero then:
     forall $ j \in J \text{ \& } k \in K \text{ forall } J, K
     \text{ where } J \cap K = \O \text{ and } J \cup K = \{1, 2, 3, 4\}.$
     
-    Combining cases 1-3 a set of candidate solution is constructed as:
+    Combining cases 1-3 a set of candidate solutions, denoted as \(S_q\), is constructed as:
     {\scriptsize
     \begin{equation*}
         S_q =
@@ -849,9 +864,52 @@ For \(\frac{d}{dp} \sum\limits_{i=1} ^ N  u_q(p)\) to equal zero then:
             \end{aligned}\right.
         \right\}.
     \end{equation*}}
+
+    The derivative of \(\sum\limits_{i=1} ^ N  u_q^{(i)}(p)\) calculated using the
+    two following properties:
+
+    \begin{equation}\label{eq:first_derivative_property}
+    \text{The derivative of a quadratic form } x A x^T \text{ is given by } 2Ax.
+    \end{equation}
+
+    \begin{equation}\label{eq:second_derivative_property}
+    \text{The derivative of a fraction function } \frac{f(x)}{g{x}} \text{ is given by }
+    \frac{f'(x)g(x) - g'(x)f(x)}{g^2(x)}.
+    \end{equation}
+
+    Using property~(\ref{eq:first_derivative_property}):
+
+    \begin{equation}\label{eq:quadratics_derivatives}
+    \frac{d}{dp} \frac{1}{2}pQp^T + cp + a = pQ + c \text{ and } \frac{d}{dp} \frac{1}{2}p\bar{Q}p^T + \bar{c}p + \bar{a} = p\bar{Q} + \bar{c}.
+    \end{equation}
+
+    Note that the derivative of \(cp\) is \(c\) and the constant disappears.
+
+    Combining Eq. (\ref{eq:quadratics_derivatives}) and property~(\ref{eq:second_derivative_property})
+    it can be proven that:
+
+    \begingroup
+    \footnotesize
+    \begin{align*}
+    \frac{d}{dp} \sum\limits_{i=1} ^ N  u_q^{(i)}(p) & = \sum\limits_{i=1} ^ N \frac{\frac{d}{dp}(\frac{1}{2}pQ^{(i)}p^T + c^{(i)}p + a^{(i)} )(\frac{1}{2}p\bar{Q^{(i)}}p^T + \bar{c^{(i)}}p + \bar{a^{(i)}}) -
+    \frac{d}{dp}(\frac{1}{2}p\bar{Q^{(i)}}p^T + \bar{c^{(i)}}p + \bar{a^{(i)}})(\frac{1}{2}pQ^{(i)}p^T + c^{(i)}p + a^{(i)})}{(\frac{1}{2}p\bar{Q^{(i)}}p^T + \bar{c^{(i)}}p + \bar{a^{(i)}})^2} \\
+    & = \sum\limits_{i=1} ^ N \frac{(pQ^{(i)} + c^{(i)} +)(\frac{1}{2}p\bar{Q^{(i)}}p^T + \bar{c^{(i)}}p + \bar{a^{(i)}})}{(\frac{1}{2}p\bar{Q^{(i)}}p^T + \bar{c^{(i)}}p + \bar{a^{(i)}})^2} -
+     \frac{(p\bar{Q^{(i)}}+ \bar{c^{(i)}})(\frac{1}{2}pQ^{(i)}p^T + c^{(i)}p + a^{(i)})}{(\frac{1}{2}p\bar{Q^{(i)}}p^T + \bar{c^{(i)}}p + \bar{a^{(i)}})^2}
+    \end{align*}
+    \endgroup
+
+    For \(\frac{d}{dp} \sum\limits_{i=1} ^ N  u_q(p)\) to equal zero then:
+
+    {\scriptsize
+    \begin{align}\label{eq:polynomials_roots}
+        \displaystyle\sum\limits_{i=1} ^ {N}
+        \left(pQ^{(i)} + c^{(i)}\right) \left(\frac{1}{2} p\bar{Q}^{(i)} p^T + \bar{c}^{(i)} p + \bar{a}^ {(i)}\right)
+        - \left(p\bar{Q}^{(i)} + \bar{c}^{(i)}\right) \left(\frac{1}{2} pQ^{(i)} p^T + c^{(i)} p + a^ {(i)}\right)
+        & = 0, \quad {while} \\
+        \displaystyle\sum\limits_{i=1} ^ {N} \frac{1}{2} p\bar{Q}^{(i)} p^T + \bar{c}^{(i)} p + \bar{a}^ {(i)} & \neq 0.
+    \end{align}}
     
-    This set is denoted as $S_q$ and the optimal solution to
-    Eq.~\ref{eq:mo_tournament_optimisation} is the point from $S_q$ for which the
+    The optimal solution to Eq.~\ref{eq:mo_tournament_optimisation} is the point from $S_q$ for which the
     utility is maximised.
 \end{proof}
 
