generalise utility and improve proofs as pointed out by reviewer 1

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -504,3 +504,11 @@ author = "Matsui, Akihiko",
   year={2013},
   publisher={National Acad Sciences}
 }
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%DERIVATIVE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+@book{Abadir2005,
+  title={Matrix algebra},
+  author={Abadir, Karim M and Magnus, Jan R},
+  volume={1},
+  year={2005},
+  publisher={Cambridge University Press}
+}
