--- a/main.tex
+++ b/main.tex
@@ -624,31 +624,34 @@ A variety of software libraries have been used in this work:
 
 \subsection{Theorem~\ref{theorem_one} Proof}\label{appendix:theorem_one}
 
+The utility of a memory one player \(p\) against an opponent \(q\), \(u_q(p)\),
+can be written as a ratio of two quadratic forms on \(R^4\).
+
 \begin{proof}
 
-    It was discussed that \(u_q(p)\) it is the product of the steady states \(v\) and
-    the PD payoffs,
+    It was discussed that \(u_q(p)\) it is the product of the steady state
+    vector \(v\) and the PD payoffs,
     
     \[u_q(p) = v \cdot (R, S, T, P).\]
 
-    The steady states vector \(v\) is as follows:
+    The steady state vector which is the solution to \(vM = v\) is given by 
     \begingroup
     \tiny
     \begin{equation*}
     \begin{split}
-        & \left[ \qquad \qquad \qquad \qquad \qquad \qquad \qquad \quad \frac{p_{2} p_{3} (q_{2} q_{4} - q_{3} q_{4}) + p_{2} p_{4} (q_{2} q_{3} - q_{2} q_{4} - q_{3} + q_{4}) +
+        v =  & \left[ \frac{p_{2} p_{3} (q_{2} q_{4} - q_{3} q_{4}) + p_{2} p_{4} (q_{2} q_{3} - q_{2} q_{4} - q_{3} + q_{4}) +
         p_{3} p_{4} (- q_{2} q_{3} + q_{3} q_{4}) - p_{3} q_{2} q_{4} + p_{4}q_{4} (q_{2} - 1)}{\bar{v}} \right., \\
-        & \left. \qquad \qquad \qquad \qquad \quad \frac{p_{1} p_{3} (q_{1} q_{4} - q_{2} q_{4}) + p_{1} p_{4} (- q_{1} q_{2} + q_{1} + q_{2} q_{4} -
+        & \left. \frac{p_{1} p_{3} (q_{1} q_{4} - q_{2} q_{4}) + p_{1} p_{4} (- q_{1} q_{2} + q_{1} + q_{2} q_{4} -
         q_{4}) + p_{3} p_{4} (q_{1} q_{2} - q_{1} q_{4} - q_{2} + q_{4}) + p_{3}q_{4} (q_{2} - 1) -
          p_{4} q_{2} (q_{4} + 1) + p_{4} (q_{4} - 1)}{\bar{v}} \right., \\
-        & \left. \qquad \qquad \qquad \quad \frac{- p_{1} p_{2} (q_{1} q_{4} - q_{3} q_{4}) - p_{1} p_{4} (- q_{1} q_{3} + q_{3} q_{4})
+        & \left. \frac{- p_{1} p_{2} (q_{1} q_{4} - q_{3} q_{4}) - p_{1} p_{4} (- q_{1} q_{3} + q_{3} q_{4})
           + p_{1} q_{1} q_{4} - p_{2} p_{4} (q_{1} q_{3} - q_{1} q_{4} - q_{3} + q_{4}) - 
           p_{2} q_{4} (q_{3}  + 1) - p_{4}q_{4} (q_{1} + q_{3}) - p_{4} (q_{3} 
           + q_{4}) - q_{4}}{\bar{v}} \right., \\ 
         & \left. \frac{p_{1} p_{2} (q_{1} q_{2} - q_{1} - q_{2} q_{3} + q_{3}) + p_{1} p_{3} (- q_{1} q_{3} + q_{2} q_{3})
          - p_{1} q_{1} (q_{2} + 1) + p_{2} p_{3} (- q_{1} q_{2} + q_{1} q_{3} 
-         + q_{2} - q_{3}) + p_{2} q_{2} (q_{3} - 1) - p_{2} (q_{3} + 1) +
-          p_{3} q_{2} (q_{1}  - q_{3}) - p_{3} (q_{2} + q_{3}) + q_{2} - 1}{\bar{v}}\right],
+         + q_{2} - q_{3}) + p_{2} (q_{3}q_{2}  - q_{2} - q_{3} - 1) +
+          p_{3} (q_{1} q_{2} - q_{3}q_{2} - q_{2} - q_{3}) + q_{2} - 1}{\bar{v}}\right],
     \end{split}
     \end{equation*}
     \endgroup
@@ -669,19 +672,39 @@ A variety of software libraries have been used in this work:
         \end{equation*}
     \endgroup
     
-    The dot product of \(v \cdot (3, 0, 5, 1)\) gives,
-    
+    The dot product of \(v \cdot (R, S, T, P)\) gives,
+
     \begingroup
-    \footnotesize
-    \begin{equation}
+    \scriptsize
+    \begin{equation*}
+    \begin{split}
+        u_q(p) = & \frac{R \left(p_{2} p_{3} (q_{2} q_{4} - q_{3} q_{4}) + p_{2} p_{4} (q_{2} q_{3} - q_{2} q_{4} - q_{3} + q_{4}) +
+        p_{3} p_{4} (- q_{2} q_{3} + q_{3} q_{4}) - p_{3} q_{2} q_{4} + p_{4}q_{4} (q_{2} - 1)\right)}{\bar{v}}  +  \\
+        & \frac{S \left(p_{1} p_{3} (q_{1} q_{4} - q_{2} q_{4}) + p_{1} p_{4} (- q_{1} q_{2} + q_{1} + q_{2} q_{4} -
+        q_{4}) + p_{3} p_{4} (q_{1} q_{2} - q_{1} q_{4} - q_{2} + q_{4}) + p_{3}q_{4} (q_{2} - 1) -
+         p_{4} q_{2} (q_{4} + 1) + p_{4} (q_{4} - 1)\right)}{\bar{v}} + \\
+        & \frac{T \left(- p_{1} p_{2} (q_{1} q_{4} - q_{3} q_{4}) - p_{1} p_{4} (- q_{1} q_{3} + q_{3} q_{4})
+          + p_{1} q_{1} q_{4} - p_{2} p_{4} (q_{1} q_{3} - q_{1} q_{4} - q_{3} + q_{4}) - 
+          p_{2} q_{4} (q_{3}  + 1) - p_{4}q_{4} (q_{1} + q_{3}) - p_{4} (q_{3} 
+          + q_{4}) - q_{4}\right)}{\bar{v}} + \\ 
+        & \frac{P \left(p_{1} (p_{2} (q_{1} q_{2} - q_{1} - q_{2} q_{3} + q_{3}) + p_{3} (- q_{1} q_{3} + q_{2} q_{3})
+        - q_{1} (q_{2} + 1)) + p_{2} p_{3} ((- q_{1} q_{2} + q_{1} q_{3} 
+        + q_{2} - q_{3}) + (q_{3}q_{2}  - q_{2} - q_{3} - 1))\right)}{\bar{v}} + \\
+        & \frac{P \left(p_{3} (q_{1} q_{2} - q_{3}q_{2} - q_{2} - q_{3}) + q_{2} - 1\right)}{\bar{v}} \implies \\
+    \end{split}
+    \end{equation*}
+    \endgroup
+
+    \begingroup
+    \scriptsize
+    \begin{equation*}
         u_q(p) =
         \left(
           \frac
-            {\parbox{6in}{$
-                p_{1} p_{2} (q_{1} q_{2} - 5 q_{1} q_{4} - q_{1} - q_{2} q_{3} + 5 q_{3} q_{4} + q_{3}) + p_{1} p_{3} (- q_{1} q_{3} + q_{2} q_{3}) + p_{1} p_{4} (5 q_{1} q_{3} - 5 q_{3} q_{4}) + p_{3} p_{4} (- 3 q_{2} q_{3} + 3 q_{3} q_{4}) +$ \\
-                \hspace*{1cm} $ p_{2} p_{3} (- q_{1} q_{2} + q_{1} q_{3} + 3 q_{2} q_{4} + q_{2} - 3 q_{3} q_{4} - q_{3}) + p_{2} p_{4} (- 5 q_{1} q_{3} + 5 q_{1} q_{4} + 3 q_{2} q_{3} - 3 q_{2} q_{4} + 2 q_{3} - 2 q_{4}) + $ \\
-                \hspace*{1cm} $ p_{1} (- q_{1} q_{2} + 5 q_{1} q_{4} + q_{1}) + p_{2} (q_{2} q_{3} - q_{2} - 5 q_{3} q_{4} - q_{3} + 5 q_{4} + 1) + p_{3} (q_{1} q_{2} - q_{2} q_{3} - 3 q_{2} q_{4} - q_{2} + q_{3}) +$ \\
-                \hspace*{4cm} $ p_{4} (- 5 q_{1} q_{4} + 3 q_{2} q_{4} + 5 q_{3} q_{4} - 5 q_{3} + 2 q_{4}) + q_{2} - 5 q_{4} - 1$
+            {\parbox{6in}{$ - p_{1} p_{2} (q_{1} - q_{3}) (P q_{2} - P - T q_{4}) + p_{1} p_{3} (q_{1} - q_{2}) (P q_{3} - S q_{4}) + p_{1} p_{4} (q_{1} - q_{4}) (S q_{2} - S - T q_{3}) + p_{2} p_{3} (q_{2} - q_{3}) (P q_{1} - P - R q_{4}) - $ \\
+            $ p_{2} p_{4} (q_{3} - q_{4}) (R q_{2} - R - T q_{1} + T) + p_{3} p_{4} (q_{2} - q_{4}) (R q_{3} - S q_{1} + S) + p_{1} q_{1} (P q_{2} - P - T q_{4}) - p_{2} (q_{3} - 1) (P q_{2} - P - T q_{4}) + $ \\
+            $ p_{3} (- P q_{1} q_{2} + P q_{2} q_{3} + P q_{2} - P q_{3} + R q_{2} q_{4} - S q_{2} q_{4} + S q_{4}) + p_{4} (- R q_{2} q_{4} + R q_{4} + S q_{2} q_{4} - S q_{2} - S q_{4} + S + T q_{1} q_{4} - T q_{3} q_{4} + T q_{3} - T q_{4}) $ \\
+            \hspace*{6.7cm} $- P q_{2} + P + T q_{4}$
             }}
             {\parbox{6in}{$
             p_{1} p_{2} (q_{1} q_{2} - q_{1} q_{4} - q_{1} - q_{2} q_{3} + q_{3} q_{4} + q_{3}) + p_{1} p_{3} (- q_{1} q_{3} + q_{1} q_{4} + q_{2} q_{3} - q_{2} q_{4}) + p_{1} p_{4} (- q_{1} q_{2} + q_{1} q_{3} + q_{1} + q_{2} q_{4} - q_{3} q_{4} - q_{4}) +$ \\
@@ -690,28 +713,25 @@ A variety of software libraries have been used in this work:
             \hspace*{7cm} $q_{2} - q_{4} - 1$
           }}
         \right).
-    \end{equation}
+    \end{equation*}
     \endgroup
     
-    Let us consider the numerator of \(u_q(p)\). The cross product terms \(p_ip_j\)
-    are given by,
+    Let us consider the numerator of \(u_q(p)\). The cross product terms
+    \(p_ip_j\) are given by,
     
     \begingroup
     \footnotesize
     \begin{align*}
-    p_{1} p_{2} (q_{1} q_{2} - 5 q_{1} q_{4} - q_{1} - q_{2} q_{3} + 5 q_{3} q_{4}
-    + q_{3}) + p_{1} p_{3} (- q_{1} q_{3} + q_{2} q_{3}) + p_{1} p_{4} (5 q_{1} q_{3} -
-    5 q_{3} q_{4}) + p_{3} p_{4} (- 3 q_{2} q_{3} + 3 q_{3} q_{4}) +  \\
-    p_{2} p_{3} (- q_{1} q_{2} + q_{1} q_{3} + 3 q_{2} q_{4} + q_{2} - 3 q_{3} q_{4} - q_{3}) +
-    p_{2} p_{4} (- 5 q_{1} q_{3} + 5 q_{1} q_{4} + 3 q_{2} q_{3} - 3 q_{2} q_{4} +
-    2 q_{3} - 2 q_{4}).
+    - p_{1} p_{2} (q_{1} - q_{3}) (P q_{2} - P - T q_{4}) + p_{1} p_{3} (q_{1} - q_{2}) (P q_{3} - S q_{4}) + p_{1} p_{4} (q_{1} - q_{4}) (S q_{2} - S - T q_{3}) + \\
+    p_{2} p_{3} (q_{2} - q_{3}) (P q_{1} - P - R q_{4}) - p_{2} p_{4} (q_{3} - q_{4}) (R q_{2} - R - T q_{1} + T) + p_{3} p_{4} (q_{2} - q_{4}) (R q_{3} - S q_{1} + S)
     \end{align*}
     \endgroup
     
-    This can be re written in a matrix format given by Eq.~\ref{eq:cross_product_coeffs}.
+    This can be re written in a matrix format given by
+    Eq.~\ref{eq:cross_product_coeffs}.
     
     \begin{equation}\label{eq:cross_product_coeffs}
-        \resizebox{0.8\linewidth}{!}{\arraycolsep=2.5pt%
+        \resizebox{0.9\linewidth}{!}{\arraycolsep=2.5pt%
         \boldmath\( 
         (p_1, p_2, p_3, p_4) \frac{1}{2} \input{tex/q_numerator} \begin{pmatrix} 
         p_1 \\
@@ -726,34 +746,36 @@ A variety of software libraries have been used in this work:
     \begingroup
     \footnotesize
     \begin{align*}
-    p_{1} (- q_{1} q_{2} + 5 q_{1} q_{4} + q_{1}) + p_{2} (q_{2} q_{3} - q_{2} - 5 q_{3} q_{4} - q_{3} + 5 q_{4} + 1) + p_{3} (q_{1} q_{2} - q_{2} q_{3} - 3 q_{2} q_{4} - q_{2} + q_{3}) + \\
-    p_{4} (- 5 q_{1} q_{4} + 3 q_{2} q_{4} + 5 q_{3} q_{4} - 5 q_{3} + 2 q_{4}).
+    p_{1} q_{1} (P q_{2} - P - T q_{4}) - p_{2} & (q_{3} - 1) (P q_{2} - P - T q_{4}) + p_{3} (- P q_{1} q_{2} + P q_{2} q_{3} + P q_{2} - P q_{3} + R q_{2} q_{4} - S q_{2} q_{4} + S q_{4}) + \\
+    p_{4} & (- R q_{2} q_{4} + R q_{4} + S q_{2} q_{4} - S q_{2} - S q_{4} + S + T q_{1} q_{4} - T q_{3} q_{4} + T q_{3} - T q_{4})
     \end{align*}
     \endgroup
     
-    and the expression can be written using a matrix format as Eq.~\ref{eq:linear_coeffs}.
+    and the expression can be written using a matrix format as
+    Eq.~\ref{eq:linear_coeffs}.
     
     \begin{equation}\label{eq:linear_coeffs}
-        \resizebox{0.38\linewidth}{!}{\arraycolsep=2.5pt%
+        \resizebox{0.60\linewidth}{!}{\arraycolsep=2.5pt%
         \boldmath\(
         (p_1, p_2, p_3, p_4) \input{tex/c_numerator}\)}
     \end{equation}
     
-    Finally, the constant term of the numerator, which is obtained by substituting
-    $p=(0, 0, 0, 0)$, is given by Eq.~\ref{eq:constant}.
+    Finally, the constant term of the numerator, which is obtained by
+    substituting $p=(0, 0, 0, 0)$, is given by Eq.~\ref{eq:constant}.
     
     \begin{equation}\label{eq:constant}
-    q_{2} - 5 q_{4} - 1
+    - P q_{2} + P + T q_{4}
     \end{equation}
     
-    Combining Eq.~\ref{eq:cross_product_coeffs}, Eq.~\ref{eq:linear_coeffs} and Eq.~\ref{eq:constant}
-    gives that the numerator of \(u_q(p)\) can be written as,
+    Combining Eq.~\ref{eq:cross_product_coeffs}, Eq.~\ref{eq:linear_coeffs} and
+    Eq.~\ref{eq:constant} gives that the numerator of \(u_q(p)\) can be written
+    as,
     
     \begingroup
     \tiny\boldmath
     \begin{align*}
         \frac{1}{2}p & \input{tex/q_numerator} p^T +  \\
-        & \input{tex/q_numerator} p + q_{2} - 5 q_{4} - 1
+        & \input{tex/c_numerator} p - P q_{2} + P + T q_{4}
     \end{align*}
     \endgroup
     
@@ -765,7 +787,7 @@ A variety of software libraries have been used in this work:
     transition probabilities of the opponent \(q_1, q_2, q_3, q_4\) as follows:
     
     \begin{equation*}
-        \resizebox{0.7\linewidth}{!}{\arraycolsep=2.5pt%
+        \resizebox{0.9\linewidth}{!}{\arraycolsep=2.5pt%
         \boldmath\(
         Q = \input{tex/q_numerator}\)},
     \end{equation*}
@@ -773,7 +795,7 @@ A variety of software libraries have been used in this work:
     \(c\) \(\in \R^{4 \times 1}\) is similarly defined by:
     
     \begin{equation*}
-        \resizebox{0.3\linewidth}{!}{\arraycolsep=2.5pt%
+        \resizebox{0.55\linewidth}{!}{\arraycolsep=2.5pt%
         \boldmath\(c = \input{tex/c_numerator}\),}
     \end{equation*}
     
@@ -785,9 +807,8 @@ A variety of software libraries have been used in this work:
 \subsection{Theorem~\ref{memone_group_best_response}}
 \begin{theorem}\label{memone_group_best_response}
 
-The optimal behaviour of a memory-one strategy player
-\(p^* \in \R_{[0, 1]} ^ 4\)
-against a set of \(N\) opponents \(\{q^{(1)}, q^{(2)}, \dots, q^{(N)} \}\)
+The optimal behaviour of a memory-one strategy player \(p^* \in \R_{[0, 1]} ^
+4\) against a set of \(N\) opponents \(\{q^{(1)}, q^{(2)}, \dots, q^{(N)} \}\)
 for \(q^{(i)} \in \R_{[0, 1]} ^ 4\) is given by:
 
 \[p^* = \textnormal{argmax}\sum\limits_{i=1} ^ N  u_q(p), \ p \in S_q.\]
@@ -810,8 +831,8 @@ The set \(S_q\) is defined as all the possible combinations of:
 \end{equation}
 }
 
-Note that there is no immediate way to find the zeros of
-\(\frac{d}{dp} \sum\limits_{i=1} ^ N  u_q(p)\) where,
+Note that there is no immediate way to find the zeros of \(\frac{d}{dp}
+\sum\limits_{i=1} ^ N  u_q(p)\) where,
 
 {\scriptsize
 \begin{align}\label{eq:mo_tournament_derivative}
@@ -858,11 +879,12 @@ For \(\frac{d}{dp} \sum\limits_{i=1} ^ N  u_q(p)\) to equal zero then:
         \end{aligned}
     \end{equation}
     
-    The optimisation problem has two inequality constraints and regarding the optimality
-    this means that:
+    The optimisation problem has two inequality constraints and regarding the
+    optimality this means that:
     
     \begin{itemize}
-        \item either the optimum is away from the boundary of the optimization domain, and so the constraints plays no role;
+        \item either the optimum is away from the boundary of the optimization
+        domain, and so the constraints plays no role;
         \item or the optimum is on the constraint boundary.
     \end{itemize}
     
@@ -872,19 +894,19 @@ For \(\frac{d}{dp} \sum\limits_{i=1} ^ N  u_q(p)\) to equal zero then:
     combinations for $p_i \in \{0, 1\}$ for $i \in \{1, 2, 3, 4\}$ are candidate
     optimal solutions.
     
-    \textbf{Case 2:} The optimum is away from the boundary of the optimization domain
-    and the interior solution $p^*$ necessarily satisfies the condition
+    \textbf{Case 2:} The optimum is away from the boundary of the optimization
+    domain and the interior solution $p^*$ necessarily satisfies the condition
     \(\frac{d}{dp} \sum\limits_{i=1} ^ N  u_q(p^*) = 0\).
     
-    \textbf{Case 3:} The optimum is away from the boundary of the optimization domain
-    but some constraints are equalities. The candidate solutions in this case
-    are any combinations of $p_j \in \{0, 1\} \quad \text{and} \quad \frac{d}{dp_k} 
-    \sum\limits_{i=1} ^ N  u_q^{(i)}(p) = 0$ 
-    forall $ j \in J \text{ \& } k \in K \text{ forall } J, K
-    \text{ where } J \cap K = \O \text{ and } J \cup K = \{1, 2, 3, 4\}.$
+    \textbf{Case 3:} The optimum is away from the boundary of the optimization
+    domain but some constraints are equalities. The candidate solutions in this
+    case are any combinations of $p_j \in \{0, 1\} \quad \text{and} \quad
+    \frac{d}{dp_k} \sum\limits_{i=1} ^ N  u_q^{(i)}(p) = 0$ forall $ j \in J
+    \text{ \& } k \in K \text{ forall } J, K \text{ where } J \cap K = \O
+    \text{ and } J \cup K = \{1, 2, 3, 4\}.$
     
-    Combining cases 1-3 a set of candidate solutions, denoted as \(S_q\), is constructed as:
-    {\scriptsize
+    Combining cases 1-3 a set of candidate solutions, denoted as \(S_q\), is
+    constructed as: {\scriptsize
     \begin{equation*}
         S_q =
         \left\{p \in \mathbb{R} ^ 4 \left|
@@ -899,16 +921,11 @@ For \(\frac{d}{dp} \sum\limits_{i=1} ^ N  u_q(p)\) to equal zero then:
         \right\}.
     \end{equation*}}
 
-    The derivative of \(\sum\limits_{i=1} ^ N  u_q^{(i)}(p)\) calculated using the
-    two following properties:
+    The derivative of \(\sum\limits_{i=1} ^ N  u_q^{(i)}(p)\) calculated using
+    the following property (proved in~\cite{Abadir2005}):
 
     \begin{equation}\label{eq:first_derivative_property}
-    \text{The derivative of a quadratic form } x A x^T \text{ is given by } 2Ax.
-    \end{equation}
-
-    \begin{equation}\label{eq:second_derivative_property}
-    \text{The derivative of a fraction function } \frac{f(x)}{g{x}} \text{ is given by }
-    \frac{f'(x)g(x) - g'(x)f(x)}{g^2(x)}.
+    \frac{d x A x^T}{dx} =  2Ax.
     \end{equation}
 
     Using property~(\ref{eq:first_derivative_property}):
@@ -918,9 +935,7 @@ For \(\frac{d}{dp} \sum\limits_{i=1} ^ N  u_q(p)\) to equal zero then:
     \end{equation}
 
     Note that the derivative of \(cp\) is \(c\) and the constant disappears.
-
-    Combining Eq. (\ref{eq:quadratics_derivatives}) and property~(\ref{eq:second_derivative_property})
-    it can be proven that:
+    Combining these it can be proven that:
 
     \begingroup
     \footnotesize
@@ -943,8 +958,8 @@ For \(\frac{d}{dp} \sum\limits_{i=1} ^ N  u_q(p)\) to equal zero then:
         \displaystyle\sum\limits_{i=1} ^ {N} \frac{1}{2} p\bar{Q}^{(i)} p^T + \bar{c}^{(i)} p + \bar{a}^ {(i)} & \neq 0.
     \end{align}}
     
-    The optimal solution to Eq.~\ref{eq:mo_tournament_optimisation} is the point from $S_q$ for which the
-    utility is maximised.
+    The optimal solution to Eq.~\ref{eq:mo_tournament_optimisation} is the point
+    from $S_q$ for which the utility is maximised.
 \end{proof}
 
 \end{document}
