--- a/tex/c_numerator.tex
+++ b/tex/c_numerator.tex
@@ -1,1 +1,1 @@
-\left[\begin{matrix}- 5 q_{1} q_{4}\\5 q_{4} \left(q_{3} - 1\right)\\q_{4} \left(2 q_{2} + 1\right)\\5 q_{1} q_{4} - 2 q_{2} q_{4} - q_{2} - 5 q_{3} q_{4} + 5 q_{3} - 3 q_{4} + 1\end{matrix}\right]
+\left[\begin{matrix}q_{1} \left(P q_{2} - P - T q_{4}\right)\\- \left(q_{3} - 1\right) \left(P q_{2} - P - T q_{4}\right)\\- P q_{1} q_{2} + P q_{2} q_{3} + P q_{2} - P q_{3} + R q_{2} q_{4} - S q_{2} q_{4} + S q_{4}\\- R q_{2} q_{4} + R q_{4} + S q_{2} q_{4} - S q_{2} - S q_{4} + S + T q_{1} q_{4} - T q_{3} q_{4} + T q_{3} - T q_{4}\end{matrix}\right]
