fixes methos section

--- a/main.tex
+++ b/main.tex
@@ -240,9 +240,9 @@ manipulation.
 
 Estimating the utility of a memory-one strategy against any number of opponents
 without simulating the interactions is the main result used in the rest of this manuscript.
-It will be used to obtain best response memory-one strategies, in tournaments
-with and without self interactions, and to explore the limitations of extortion
-and of short memory.
+It will be used to obtain best response memory-one strategies in tournaments
+with and without self interactions in order to explore the limitations of extortion
+and restricted memory.
 
 % \subsection{Stability of defection}\label{subsection:stability_defection}
 
